# jdksavdecc-mcu

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  JDKSAvdecc.h  JDKSAvdeccADPManager.cpp  JDKSAvdeccADPManager.h  JDKSAvdeccADPManager.hpp  JDKSAvdeccControlReceiver.cpp  JDKSAvdeccControlReceiver.h  JDKSAvdeccControlReceiver.hpp  JDKSAvdeccControlSender.cpp  JDKSAvdeccControlSender.h  JDKSAvdeccControlSender.hpp  JDKSAvdeccControlValueHolder.cpp  JDKSAvdeccControlValueHolder.h  JDKSAvdeccControlValueHolder.hpp  JDKSAvdeccControllerEntity.cpp  JDKSAvdeccControllerEntity.h  JDKSAvdeccControllerEntity.hpp  JDKSAvdeccDJEntity.cpp  JDKSAvdeccDJEntity.h  JDKSAvdeccEEPromStorage.cpp  JDKSAvdeccEEPromStorage.h  JDKSAvdeccEEPromStorage.hpp  JDKSAvdeccEntity.cpp  JDKSAvdeccEntity.h  JDKSAvdeccEntity.hpp  JDKSAvdeccFrame.h  JDKSAvdeccFrame.hpp  JDKSAvdeccHandler.cpp  JDKSAvdeccHandler.h  JDKSAvdeccHandler.hpp  JDKSAvdeccHandlerGroup.cpp  JDKSAvdeccHandlerGroup.h  JDKSAvdeccHandlerGroup.hpp  JDKSAvdeccHelpers.cpp  JDKSAvdeccHelpers.h  JDKSAvdeccHelpers.hpp  (+22 more)
docs-dev/: Doxyfile
examples/: JDKSAvdeccExample2.cpp  JDKSAvdeccMCU_ADP_Advertise.cpp  JDKSAvdeccMCU_DisplayEntity.cpp  JDKSAvdeccMCU_KnobsAndButtons.cpp  KnobsAndButtons.cpp
hold/: JDKSAvdeccMCU_RawSocketMacOSX.hpp  JDKSAvdeccMCU_RawSocketMulti.hpp  JDKSAvdeccMCU_RawSocketWin32.cpp  JDKSAvdeccMCU_RawSocketWin32.hpp  RawSocketLinux.cpp  RawSocketLinux.hpp  RawSocketMacOSX.cpp  RawSocketMacOSX.hpp  RawSocketMulti.hpp  RawSocketWin32.cpp  RawSocketWin32.hpp
include/: JDKSAvdeccMCU.hpp  JDKSAvdeccMCU_ADPManager.hpp  JDKSAvdeccMCU_Apc.hpp  JDKSAvdeccMCU_App.hpp  JDKSAvdeccMCU_AppMessage.hpp  JDKSAvdeccMCU_AppMessageHandler.hpp  JDKSAvdeccMCU_AppMessageParser.hpp  JDKSAvdeccMCU_Aps.hpp  JDKSAvdeccMCU_Arduino.h  JDKSAvdeccMCU_Arduino.hpp  JDKSAvdeccMCU_ArduinoFakeImpl.h  JDKSAvdeccMCU_Control.hpp  JDKSAvdeccMCU_ControlIdentify.hpp  JDKSAvdeccMCU_ControlReceiver.hpp  JDKSAvdeccMCU_ControlSender.hpp  JDKSAvdeccMCU_ControlValueHolder.hpp  JDKSAvdeccMCU_ControllerEntity.hpp  JDKSAvdeccMCU_EEPromStorage.hpp  JDKSAvdeccMCU_Entity.hpp  JDKSAvdeccMCU_EntityState.hpp  JDKSAvdeccMCU_Eui.hpp  JDKSAvdeccMCU_FixedBuffer.hpp  JDKSAvdeccMCU_Frame.hpp  JDKSAvdeccMCU_Handler.hpp  JDKSAvdeccMCU_HandlerGroup.hpp  JDKSAvdeccMCU_Helpers.hpp  JDKSAvdeccMCU_Http.hpp  JDKSAvdeccMCU_IntelGalileo.hpp  JDKSAvdeccMCU_MDNSRegister.hpp  JDKSAvdeccMCU_NetIO.hpp  JDKSAvdeccMCU_PcapFile.hpp  JDKSAvdeccMCU_PcapFileNetIO.hpp  JDKSAvdeccMCU_PcapFileReader.hpp  JDKSAvdeccMCU_PcapFileWriter.hpp  JDKSAvdeccMCU_Platform.hpp  JDKSAvdeccMCU_PlatformApple.hpp  JDKSAvdeccMCU_PlatformBare.hpp  JDKSAvdeccMCU_PlatformLinux.hpp  (+15 more)
(+128 files in other folders)
